kubernetes/pgsql/deployment-app.yaml
# Remplacer ranawane93 par ton pseudo Docker Hub
# Construire et pousser l'image AVANT de déployer :
#   docker build -t ranawane93/gestion-produits-pgsql:latest -f docker/app-pgsql/Dockerfile .
#   docker push ranawane93/gestion-produits-pgsql:latest
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-pgsql
  namespace: gestion-produits
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestion-produits-pgsql
  template:
    metadata:
      labels:
        app: gestion-produits-pgsql
    spec:
      containers:
        - name: php-app-pgsql
          image: ranawane93/gestion-produits-pgsql:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: uploads
              mountPath: /var/www/html/uploads
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads-pgsql-pvc
