kubernetes/pgsql/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-pgsql-service
  namespace: gestion-produits
spec:
  selector:
    app: gestion-produits-pgsql
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
